<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MoverOptions" Id="{fde02a01-af06-0549-1846-c7bdbb2928d4}">
    <Declaration><![CDATA[TYPE ST_MoverOptions :
STRUCT
	BaseMoveOptions						: REFERENCE TO Tc3_Mc3PlanarMotion.ST_MoveOnTrackOptions;
	GearInMasterMoverOptions	: REFERENCE TO Tc3_Mc3PlanarMotion.ST_GearInPosOnTrackWithMasterMoverOptions;
	TempGap 									: LREAL := stMoverConfig.TightMoverGap; //for ramping up/down gap over a sector
	OptionUpdateInterval			:	LREAL := 5.0; //mm
	GapInTransition						: BOOL;
	MasterSyncPosition				: LREAL;
	MasterMoverID							: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>