<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_PlanarTrackConfig" Id="{41fd4cc1-ca39-0eac-1ee8-d3be3f06a63e}">
    <Declaration><![CDATA[TYPE ST_PlanarTrackConfig :
STRUCT
	TrackIndex					: E_TrackNum;
	MCTrack						: CDT_MCTOPLC_PLANAR_TRACK;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>