<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_SwitchConfig" Id="{1b01e06e-3ad9-017e-0490-e818c7958e80}">
    <Declaration><![CDATA[TYPE ST_SwitchConfig :
STRUCT
	MagnetStartPosition				    	    : LREAL := 10000; // mm
	MagnetEndPosition				    	    : LREAL := 10555; // mm
	SwitchCurrentNominal						: LREAL := 9; // A
	CurrentMultFactor							: LREAL := 1310; // Scaling factor for 10V output=25.0A
    UseNominalCurrentVeloSetpoints              : BOOL  := TRUE;
    PosnCurrentCoeffNominal                     : LREAL := 0.1087;
	PosnCoilResponseTimeCoeffNominal			: LREAL := 0.978;
	CurrentVelocityCoeffNominal         		: LREAL := 1;
    VelocityCoeffNominal                        : LREAL := 1;
    VelocityCoeffPower                          : LREAL := 2;
    VelocityCoeffFactor                         : LREAL := 0.00000007; //E-8
    PermanentMagnetForce                        : LREAL := 0;
//	MagnetPosnComp								: LREAL := 100;
 	SwitchModeHMI        						: ST_DivertConfig;
 	SwitchModeInternal    						: ST_DivertConfig;
	ModeChangeInMotionOK						: BOOL;
END_STRUCT
END_TYPE;]]></Declaration>
  </DUT>
</TcPlcObject>